# FreeList-Allocator

./: .gitignore  CMakeLists.txt  Makefile  README.md  test_allocator  test_arena  test_multithreading
DataStructures/C/: structures.h
allocator/: allocator.c  allocator.h
allocator/allocator/: allocator.c  allocator.h
arena/: arena.c  arena.h
debugging/: debugging.c  debugging.h
tests/: allocator_test.c  arena_test.c  multithreading_test.c  parser_test.c  test_allocator  test_arena  test_multithreading  test_parser
threads/: pool.c  threads.h
threads/threads/: threads.h
